--- a/app/views/addRateCriteria.scala.html
+++ b/app/views/addRateCriteria.scala.html
@@ -1,3 +1,5 @@
+@(message: String)
+
 <!DOCTYPE html>
 
 <html>
@@ -6,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <title>Timer page</title>
+        <title>Add Rate Criteria</title>
 
             <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
@@ -17,7 +19,6 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.css")">
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/jquery.countdown.js")"></script>
             <!-- Bootstrap Core JavaScript -->
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
 
@@ -27,7 +28,6 @@
 
             <!-- Custom Theme JavaScript -->
         <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/addImage.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/addText.js")" type="text/javascript"></script>
 
     </head>
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/index">Timer Page</a>
+                    <a class="navbar-brand" href="/index">@session.get("type") : @session.get("name")</a>
                 </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,20 +51,17 @@
                         <li class="hidden active">
                             <a href = "#page-top"></a>
                         </li>
-                        <li class = "hidden active">
-                            <a href = "#page-top"></a>
-                        </li>
                         <li class = "page-scroll">
                             <a href = "/criteria">Criteria Vote</a>
                         </li>
                         <li class = "page-scroll">
-                            <a href = "/index">Index</a>
+                            <a href = "/TimerPage">Set Timer</a>
                         </li>
                         <li class = "page-scroll">
                             <a href = "/result">Voting Result</a>
                         </li>
                         <li class = "page-scoll">
-                            <a href = "/addprojectpage">Add Project</a>
+                            <a href = "/index">Index</a>
                         </li>
                         <li class = "page-scoll">
                             <a href = "/register">register</a>
@@ -78,55 +75,38 @@
             </div>
                 <!-- /.container-fluid -->
         </nav>
+
         <header>
+
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12" style="text-decoration-color: slategrey">
-                        <form id="timer" class="text-center" role="form" action = "/setTimer" method = post>
+                        @message
+                        <form id="project" class="text-center" role="form" action = "/addproject" method = post>
+                                <!-- add text -->
                             <div class="wrap">
                                 <div class="mat-div">
-                                    <label for="hour" class="mat-label">Hour</label>
-                                    <input class="mat-input" type="text" name="hour" placeholder="0">
+                                    <label for="name" class="mat-label">Name</label>
+                                    <input type="text" class="mat-input" name="name" placeholder="enter the project name">
                                 </div>
+
                                 <div class="mat-div">
-                                    <label for="hour" class="mat-label">Minute</label>
-                                    <input class="mat-input" type="text" name="minute" placeholder="0">
+                                    <label for="description" class="mat-label">Project Description</label>
+                                    <input type="text" class="mat-input" name="description" placeholder="enter the project description">
+                                </div>
+
+                                <div class="mat-div">
+                                    <label for="maneger" class="mat-label">Project Manager</label>
+                                    <input type="text" class="mat-input" name="manager"  placeholder="enter the project maneger">
                                 </div>
                                 <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                             </div>
                         </form>
+                        <a href="/projectList"> <button type="button" class="btn btn-success">ProjectList</button></a>
                     </div>
                 </div>
             </div>
         </header>
-
-
-
-        @if(controllers.TimerController.getTimeLeftInSec() != -1) {
-            <div class = "text-center">Vote closes in <div id = "clock" ></div>
-            <form action="/stoptimer" method="get">
-                <input type="submit" value="Stop timer!!"
-                name="Submit" id="frm1_submit" />
-            </form>
-            </div>
-        }
-        <script type="text/javascript">
-        $('#clock').countdown('@controllers.TimerController.getDate() ' + @controllers.TimerController.getTimeLeftHour + ':' + @controllers.TimerController.getTimeLeftMinute + ':0')
-        .on('update.countdown', function(event) {
-            var format = '%H:%M:%S';
-            if(event.offset.days > 0) {
-                format = '%-d day%!d ' + format;
-            }
-            if(event.offset.weeks > 0) {
-                format = '%-w week%!w ' + format;
-            }
-            $(this).html(event.strftime(format));
-        })
-        .on('finish.countdown', function(event) {
-            $(this).html('Vote is closed!');
-                //.parent().addClass('disabled')
-        });
-        </script>
 
             <!-- Footer -->
         <footer class="text-center">
