--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -3938,11 +3938,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-width: 1px 0 0;
 }
 .navbar-brand {
-  /*float: left;*/
-  padding: 19.5px 15px;
-  font-size: 14px;
+  float: left;
+  padding: 19.5px 15px 0px 30px;
+  margin-right: 50px;
+  font-size: 15px;
   line-height: 21px;
-  height: 60px;
+  height: 40px;
+  position: fixed;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -3951,15 +3953,21 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand > img {
   display: block;
 }
-@media (min-width: 1000px) {
 
+@media (min-width: 600px) {
+    .navbar-brand {
+        font-size: 17px;
+    }
 }
 
 @media (min-width: 1000px) {
-  .navbar > .container .navbar-brand,
-  .navbar > .container-fluid .navbar-brand {
-    margin-left: -15px;
-  }
+    .navbar-brand {
+        position: relative;
+    }
+    .navbar > .container .navbar-brand,
+    .navbar > .container-fluid .navbar-brand {
+        margin-left: -15px;
+    }
 }
 .navbar-toggle {
   position: relative;
@@ -6341,7 +6349,7 @@ button.close {
   color: #18bc9c;
 }
 .navbar-brand {
-  padding: 18.5px 15px 20.5px;
+  /*padding: 18.5px 15px 20.5px;*/
 }
 .btn:active {
   -webkit-box-shadow: none;
