--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -124,7 +124,9 @@
                             }
                             </div>
                         </form>
+                        <div class="wrap">
                         <a href="/criteriaList"> <button id="submit" type="submit" class="btn btn-primary btn-block center-block">VoteCriteriaList</button></a>
+                            </div>
                     </div>
                 </div>
             </div>
